--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
     --second-title-color: #2E2F42;
     --third-title-color: #434455 ;
     --forth-title-color: #f4f4fd;
+    --gap: gap:20px;
 
 }
 
@@ -62,13 +63,20 @@ letter-spacing: 0.02em;
 }
 
 /* ----------------header -------------------------*/
+.container-header{
+   
+}
 .header {
 color:#FFFFFF ;
 }
 
 .navigation-list{
+    display: flex;
+    justify-content: start;
 
 }
+
+
 
 .main-logo {
 font-family: 'Raleway', sans-serif;
@@ -81,6 +89,7 @@ align-items: center;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4D5AE5;
+padding: 0px; 
 }
 
 .main-logo-studio {
@@ -109,7 +118,14 @@ color: var(--second-title-color);
     color: #404bbf ; 
 }
 
-.header-list{}
+.header-list{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 40px;
+    margin-left: 76px;
+}
+
 
 .header-link {
 font-weight: 500;
@@ -128,7 +144,12 @@ color: #404bbf;
 
 font-style:normal;
 }
-
+.info{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 40px;
+}
 .mail {
 
 }
