--- a/css/styles.css
+++ b/css/styles.css
@@ -3,17 +3,21 @@
     --second-title-color: #2E2F42;
     --third-title-color: #434455 ;
     --forth-title-color: #f4f4fd;
-    --gap: gap:20px;
 
 }
 
 p,h1,h2,h3,h4,h5,h6 {
     margin: 0;
+    padding: 0;
 }
 
 ul {
 padding-left: 0;
 margin: 0;
+}
+
+img {
+    display: block;
 }
 
 
@@ -44,13 +48,13 @@ color: #434455;
 
 
 }
-.title {
+/* .title {
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    color: var(--second-title-color);
+    color: var(--second-title-color); */
 }
 
 .text {
@@ -63,17 +67,24 @@ letter-spacing: 0.02em;
 }
 
 /* ----------------header -------------------------*/
+.container {
+    width: 1125px;
+    margin-left: auto;
+    margin-right: auto;
+    outline: 1px solid red;
+
+}
 .container-header{
    
 }
 .header {
 color:#FFFFFF ;
+height: 72px;
 }
 
 .navigation-list{
     display: flex;
     justify-content: start;
-
 }
 
 
@@ -90,6 +101,7 @@ letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4D5AE5;
 padding: 0px; 
+margin: 24px ;
 }
 
 .main-logo-studio {
@@ -141,14 +153,14 @@ color: #404bbf;
 }
 
 .adress {
-
 font-style:normal;
 }
 .info{
     display: flex;
     justify-content: flex-end;
-    align-items: center;
+    align-content: center;
     gap: 40px;
+   
 }
 .mail {
 
@@ -182,15 +194,25 @@ tel.link:is(:hover, :focus) {
 /* !<!-- Головний контент,секція1 --> */
 
 .descrition {
+    height: 683px; ;
     background-color: var(--second-title-color);
+    margin: 0 auto;
+    padding-top: 188px ;
+    padding-bottom: 292px;
 }
 
 .descrition-title {
     font-size: 56px;
     line-height: 1.07;
+    /* display: flex;
+    justify-content: center; */
     text-align: center;
     letter-spacing: 0.02em;
     color: var(--main-title-color);
+    width: 496px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 48px;
 }
 .description-btn {
     background-color: #4D5AE5;
@@ -200,6 +222,8 @@ tel.link:is(:hover, :focus) {
     font-size: 16px;
     line-height: 1.5;
     display: flex;
+    display: block;
+    margin: 0 auto;
     align-items: center;
     letter-spacing: 0.04em;
     color: #FFFFFF;
@@ -210,18 +234,25 @@ tel.link:is(:hover, :focus) {
 }
 
 /*---------Strategy, section2----------*/
-
+.container-strategy {
+    margin: 0 auto;
+}
 .strategy-list {
-
-
+margin: 120px 156px;
 }
 .strategy-main-title {
 
 }
 .strategy-list-content {
+    display: flex;
+    justify-content: space-between;
+    gap:24px;
 
 }
 .strategy-item {
+display: flex;
+flex-wrap: wrap;
+justify-content: space-between;
 
 }
 .strategy-title {
@@ -237,10 +268,15 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
+
 }
 
 /* --------------------What are we doing, perfomnce section 3------------------- */
 .perfomance {
+    /* width:calc((100% - 48px) / 3); */
+    margin-bottom: 120px;
+    padding-top: 0;
+    height: 412px;
 
 }
 .perfomance-title {
@@ -250,9 +286,13 @@ color: #434455;
     text-transform: capitalize; 
     letter-spacing: 0.02em;
     color: var(--second-title-color);
+    padding-top: 0;
 }
 
 .perfomance-list {
+    display: flex;
+    gap: 24px;
+    margin-top: 72px;
 }
 .perfomance-item {
 }
@@ -261,6 +301,8 @@ color: #434455;
 
 .team {
     background-color: #F4F4FD; 
+    height: 732px;
+
 }
 .team-title {
     font-size: 36px;
@@ -269,11 +311,23 @@ color: #434455;
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: var(--second-title-color);
+    padding-top: 115px;
+    padding-bottom: 72px;
 }
 .team-members {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+}
+
+.team-members-description{
+    padding: 32px 16px;
+
 }
 .team-members-item {
     background-color: #FFFFFF;
+    /* border: 2px solid #404BBF; */
 }
 .team-members-item-title {
 font-weight: 500;
@@ -286,20 +340,35 @@ color: var(--second-title-color);
 .team-members-item-text {
     line-height: 1.5 ;
     letter-spacing: 0.02em;
-
+    text-align: center;
 }
 
 /*  -----------Footer ----------- */
 
 .footer {
     background-color: var(--second-title-color);
+    height: 312px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-left: 134px;
+    justify-content: start;
 }
 
 .footer-text {
+    width: 264px;
+    height: 72px;
+    display: flex;
+    justify-content: center
+    flex-wrap: wrap;
     color: var(--forth-title-color);
+    margin-top: 16px;
+    /* padding-top: 145px ;
+    padding-bottom: 95px; */
+   max-width: 264px;
 }
 .main-logo-studio-footer {
      color: var(--forth-title-color);
+    
 }
 
  /* ----------------PAGE POTFOLIO --------------------  */
@@ -313,6 +382,9 @@ color: var(--second-title-color);
 .advantages-title {
 }
 .advantages-list {
+    display: flex;
+    justify-content: center;
+    gap:24px;
 }
 .btn {
     background-color:var(--forth-title-color) ;
@@ -322,6 +394,7 @@ color: var(--second-title-color);
     font-size: 16px;
     line-height: 1.5;
     display: flex;
+    justify-content: center;
     align-items: center;
     text-align: center;
     letter-spacing: 0.04em;
@@ -337,13 +410,25 @@ color: var(--second-title-color);
 
 /* ------------------Full list of advantages--------------- */
 
+.container-possibilities{
+    /* display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    padding-bottom: 48px; */
+}
 .possibilities {
 }
 .possibilities-title {
 }
 .possibilities-list {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+ 
 }
 .possibilities-item {
+max-width: calc((100% - 48px) / 3);
 }
 .possibilities-item-link{
 
@@ -362,4 +447,7 @@ color: var(--second-title-color);
     color: var(--third-title-color);
     
 }
-
+.possibilities-text-container{
+    padding: 32px 16px;
+    border: 1px solid #E7E9FC;
+}
