--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,8 @@
 
 }
 
-p,h1,h2,h3,h4,h5,h6 {
+p, h1, h2, h3, h4, h5, h6 {
     margin: 0;
-    padding: 0;
 }
 
 ul {
@@ -19,7 +18,6 @@ margin: 0;
 img {
     display: block;
 }
-
 
 
 body {
@@ -44,17 +42,6 @@ line-height: 1.5;
 text-align: center;
 letter-spacing: 0.02em;
 color: #434455;
-
-
-
-}
-/* .title {
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: var(--second-title-color); */
 }
 
 .text {
@@ -68,23 +55,27 @@ letter-spacing: 0.02em;
 
 /* ----------------header -------------------------*/
 .container {
-    width: 1125px;
-    margin-left: auto;
-    margin-right: auto;
-    outline: 1px solid red;
-
+    width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+    outline: 1px solid #404bbf;
 }
 .container-header{
+    display: flex;
+    align-items: center;
    
 }
 .header {
 color:#FFFFFF ;
-height: 72px;
+padding-top: 24px;
+padding-bottom: 24px;
 }
 
 .navigation-list{
     display: flex;
     justify-content: start;
+    margin-right: auto;
 }
 
 
@@ -132,10 +123,9 @@ color: var(--second-title-color);
 
 .header-list{
     display: flex;
-    flex-direction: row;
     align-items: center;
     gap: 40px;
-    margin-left: 76px;
+
 }
 
 
@@ -154,6 +144,7 @@ color: #404bbf;
 
 .adress {
 font-style:normal;
+align-content: center;
 }
 .info{
     display: flex;
@@ -163,6 +154,7 @@ font-style:normal;
    
 }
 .mail {
+
 
 }
 
@@ -194,18 +186,23 @@ tel.link:is(:hover, :focus) {
 /* !<!-- Головний контент,секція1 --> */
 
 .descrition {
-    height: 683px; ;
+    /* height: 683px; ;
     background-color: var(--second-title-color);
     margin: 0 auto;
     padding-top: 188px ;
-    padding-bottom: 292px;
+    padding-bottom: 292px; */
+    margin-left: auto;
+margin-right: auto;
+padding-top: 188px;
+padding-bottom: 188px;
+max-width: 2560px;
+text-align: center;
+background-color: var(--second-title-color);
 }
 
 .descrition-title {
     font-size: 56px;
     line-height: 1.07;
-    /* display: flex;
-    justify-content: center; */
     text-align: center;
     letter-spacing: 0.02em;
     color: var(--main-title-color);
@@ -234,11 +231,10 @@ tel.link:is(:hover, :focus) {
 }
 
 /*---------Strategy, section2----------*/
-.container-strategy {
-    margin: 0 auto;
-}
+
 .strategy-list {
-margin: 120px 156px;
+padding-top: 120px ;
+padding-bottom: 156px;
 }
 .strategy-main-title {
 
@@ -273,10 +269,9 @@ color: #434455;
 
 /* --------------------What are we doing, perfomnce section 3------------------- */
 .perfomance {
-    /* width:calc((100% - 48px) / 3); */
-    margin-bottom: 120px;
+    padding-bottom: 120px;
     padding-top: 0;
-    height: 412px;
+    /* height: 412px; */
 
 }
 .perfomance-title {
@@ -301,7 +296,9 @@ color: #434455;
 
 .team {
     background-color: #F4F4FD; 
-    height: 732px;
+    /* height: 732px; */
+    padding-top: 120px ;
+    padding-bottom: 0;
 
 }
 .team-title {
@@ -327,7 +324,6 @@ color: #434455;
 }
 .team-members-item {
     background-color: #FFFFFF;
-    /* border: 2px solid #404BBF; */
 }
 .team-members-item-title {
 font-weight: 500;
@@ -345,26 +341,28 @@ color: var(--second-title-color);
 
 /*  -----------Footer ----------- */
 
+.container-footer{
+
+}
+
 .footer {
     background-color: var(--second-title-color);
-    height: 312px;
     padding-top: 100px;
     padding-bottom: 100px;
-    padding-left: 134px;
+    /* padding-left: 134px; */
     justify-content: start;
 }
 
 .footer-text {
-    width: 264px;
-    height: 72px;
     display: flex;
     justify-content: center
     flex-wrap: wrap;
     color: var(--forth-title-color);
-    margin-top: 16px;
-    /* padding-top: 145px ;
-    padding-bottom: 95px; */
-   max-width: 264px;
+    padding-top: 145px ;
+    padding-bottom: 95px;
+    flex-wrap: wrap;
+    max-width: 264px;
+    
 }
 .main-logo-studio-footer {
      color: var(--forth-title-color);
@@ -378,13 +376,21 @@ color: var(--second-title-color);
 /* ------------------------Section1, our advantages --------------- */
 
 .advantages {
+    margin-top: 96px;
+    margin-bottom: 72px;
 }
 .advantages-title {
 }
 .advantages-list {
     display: flex;
     justify-content: center;
-    gap:24px;
+    gap: 24px;
+    align-items: center;
+    border: 1px
+    text-transform: none;
+    color: #4D5AE5;
+    
+
 }
 .btn {
     background-color:var(--forth-title-color) ;
@@ -399,6 +405,9 @@ color: var(--second-title-color);
     text-align: center;
     letter-spacing: 0.04em;
     color: #4D5AE5;
+    border: 1px solid #E7E9FC;
+    border-radius: 4px;
+    background: #F4F4FD; 
 
 }
 
@@ -411,12 +420,11 @@ color: var(--second-title-color);
 /* ------------------Full list of advantages--------------- */
 
 .container-possibilities{
-    /* display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    padding-bottom: 48px; */
+
 }
 .possibilities {
+    margin-top: 72px;
+    margin-bottom: 120px;
 }
 .possibilities-title {
 }
@@ -425,7 +433,7 @@ color: var(--second-title-color);
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
- 
+
 }
 .possibilities-item {
 max-width: calc((100% - 48px) / 3);
