--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ letter-spacing: 0.02em;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
-    outline: 1px solid #404bbf;
+    /* outline: 1px solid #404bbf; */
 }
 .container-header{
     display: flex;
@@ -87,14 +87,10 @@ font-family: 'Raleway', sans-serif;
 font-weight: 800;
 font-size: 18px;
 line-height: 1.17;
-display: flex;
-flex-direction: row;
-align-items: center;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4D5AE5;
 padding: 0px; 
-margin: 24px ;
 }
 
 .main-logo-studio {
@@ -103,11 +99,10 @@ font-style: normal;
 font-weight: 800;
 font-size: 18px;
 line-height: 1.17;
-display: flex;
-align-items: center;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: var(--second-title-color);
+margin-right: 76px;
 
 }
 
@@ -218,12 +213,13 @@ background-color: var(--second-title-color);
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    display: flex;
     display: block;
     margin: 0 auto;
-    align-items: center;
     letter-spacing: 0.04em;
     color: #FFFFFF;
+    padding: 16px 32px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
 }
 .description-btn:is(:hover, :focus) {
     background-color: #404BBF;
@@ -233,8 +229,8 @@ background-color: var(--second-title-color);
 /*---------Strategy, section2----------*/
 
 .strategy-list {
-padding-top: 120px ;
-padding-bottom: 156px;
+padding-top: 37px ;
+padding-bottom: 120px;
 }
 .strategy-main-title {
 
@@ -273,7 +269,6 @@ color: #434455;
 .perfomance {
     padding-bottom: 120px;
     padding-top: 0;
-    /* height: 412px; */
 
 }
 .perfomance-title {
@@ -298,7 +293,6 @@ color: #434455;
 
 .team {
     background-color: #F4F4FD; 
-    /* height: 732px; */
     padding-top: 120px ;
     padding-bottom: 0;
 
@@ -310,7 +304,6 @@ color: #434455;
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: var(--second-title-color);
-    padding-top: 115px;
     padding-bottom: 72px;
 }
 .team-members {
@@ -318,6 +311,7 @@ color: #434455;
     justify-content: center;
     align-items: center;
     gap: 24px;
+    padding-bottom: 120px;
 }
 
 .team-members-description{
@@ -351,19 +345,17 @@ color: var(--second-title-color);
     background-color: var(--second-title-color);
     padding-top: 100px;
     padding-bottom: 100px;
-    /* padding-left: 134px; */
     justify-content: start;
 }
 
 .footer-text {
     display: flex;
-    justify-content: center
+    justify-content: center;
     flex-wrap: wrap;
     color: var(--forth-title-color);
-    padding-top: 145px ;
-    padding-bottom: 95px;
     flex-wrap: wrap;
     max-width: 264px;
+    margin-top: 16px;
     
 }
 .main-logo-studio-footer {
@@ -410,6 +402,7 @@ color: var(--second-title-color);
     border: 1px solid #E7E9FC;
     border-radius: 4px;
     background: #F4F4FD; 
+    padding: 12px 24px ;
 
 }
 
