--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,10 @@
 
 }
 
+/* .post:nth-child(1) {
+    box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.3);
+  } */
+  
 p, h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
@@ -126,6 +130,7 @@ color: var(--second-title-color);
     gap: 40px;
     margin-left: 76px;
 
+
 }
 
 
@@ -208,6 +213,7 @@ background-color: var(--second-title-color);
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 48px;
+
 }
 .description-btn {
     background-color: #4D5AE5;
